Add JVM flag to suppress deprecated Unsafe warnings [CTT-1059] (#6166)
`Hazelcast` and one of its dependencies (`JCTools`) internally use `use
sun.misc.Unsafe` methods that are deprecated. This triggers runtime
warnings in Java 25.
This PR updates the `common.sh` and `common.bat` scripts to include the
JVM flag `--sun-misc-unsafe-memory-access=allow`, which suppresses these
warnings.

------------

- __Jira Ticket:__ https://hazelcast.atlassian.net/browse/CTT-1059

------------

__Checklist:__

- [ ] __Breaking Changes:__ I have described any breaking changes on
behavioral change to Public API, protocol, serialization, or snapshot
and the migration path if applicable.
- [X] __Traceability:__ I have associated the PR with a Jira ticket
through title and linked relevant design docs (ADR/TDD).
- [ ] __Correctness & Concurrency:__ I have verified the logic for
thread safety, race conditions, and distributed system impacts.
- [ ] __Testing:__ I have included meaningful tests. New public APIs
have 100% coverage.
- [ ] __Public Config API:__ I have followed the
[Checklist](https://github.com/hazelcast/hazelcast/wiki/Checklist-for-Hazelcast-config-changes)
for Hazelcast config changes.
- [ ] __Performance:__ I have checked for unnecessary performance hits
(e.g., excessive object creation).
- [X] __Clarity:__ The code is written with empathy for the "next
engineer" and includes comments for complex "why" logic.
- [ ] __Public API Standards:__ New public APIs have
`@Nonnull`/`@Nullable` annotations and `@since`, `@returns`, `@throws`
Javadoc tags.
- [X] __Labels & Metadata:__ All labels (`Type`, `Source`, `Module`) and
`Milestone` are set; release note labels are applied.
- [ ] __Cross-Language:__ Label `All Languages Should Check` is set if
Java client API changes affect non-Java clients.

GitOrigin-RevId: 0e8207a258cad564a822b1ca2ab153ec507b9243